# MotionToGo

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
CMake/Modules/: Compiler.cmake  Platform.cmake
Source/: CMakeLists.txt  ErrorHandling.cpp  ErrorHandling.hpp  MotionToGo.cpp  Noncopyable.hpp  SmartPtrHelper.hpp  Util.hpp  pch.hpp
Source/Gpu/: GpuBuffer.cpp  GpuBuffer.hpp  GpuBufferHelper.hpp  GpuCommandList.cpp  GpuCommandList.hpp  GpuDescriptorAllocator.cpp  GpuDescriptorAllocator.hpp  GpuDescriptorHeap.cpp  GpuDescriptorHeap.hpp  GpuMemoryAllocator.cpp  GpuMemoryAllocator.hpp  GpuResourceViews.cpp  GpuResourceViews.hpp  GpuSystem.cpp  GpuSystem.hpp  GpuTexture2D.cpp  GpuTexture2D.hpp
Source/MotionBlurGenerator/: MotionBlurGatherCs.hlsl  MotionBlurGenerator.cpp  MotionBlurGenerator.hpp  MotionBlurNeighborMaxCs.hlsl  Nv12ToRgbCs.hlsl  OverlayMotionVectorCs.hlsl  RgbToNv12Cs.hlsl
Source/Reader/: ImageSeqReader.cpp  Reader.cpp  Reader.hpp  VideoReader.cpp
Test/: CMakeLists.txt  Test.cpp
Test/Data/: .gitignore
Test/Data/Video/: LICENSE
